--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.24.1",
-    "tone": "^15.1.22"
+    "tone": "^15.1.22",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
