Add improved audio player using react-h5-audio-player library - fixes pause functionality issues with better cross-browser compatibility, keyboard support, and accessibility

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "opensheetmusicdisplay": "^1.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-h5-audio-player": "^3.10.1",
     "react-router-dom": "^6.24.1",
     "tone": "^15.1.22",
     "zod": "^4.1.8"
