--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "vercel-build": "vite build"
   },
   "dependencies": {
+    "@google/genai": "^1.20.0",
     "@music-i18n/musicxml-player": "github:infojunkie/musicxml-player",
+    "@supabase/supabase-js": "^2.57.4",
     "html-midi-player": "^1.6.0",
     "midi-parser-js": "^4.0.4",
+    "node-fetch": "^3.3.2",
     "opensheetmusicdisplay": "^1.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,7 +25,11 @@
     "zod": "^4.1.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.14.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
