--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-h5-audio-player": "^3.10.1",
     "react-router-dom": "^6.24.1",
     "tone": "^15.1.22",
+    "vercel": "^48.1.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
