feat: Expand AOS4-3a Pop Song quiz to 20 questions and add Haydn Quartet content
- Expanded Pop Song introduction quiz from 15 to 20 questions
- Added 5 new questions covering production techniques, cultural impact, and genre evolution
- Fixed quiz import issue in introduction.ts to display all 20 questions
- Added Haydn String Quartet test page with audio and score components
- Included Haydn audio files and notation images
- Updated .gitignore with proper deployment and OS file exclusions

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,20 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Deployment
 .vercel
+.netlify
+
+# Project specific
 musicxml-midi/
-.env.local
-.env.local
+
+# Temporary files
+*.tmp
+*.temp
+
+# OS generated files
+Thumbs.db
+.DS_Store?
+ehthumbs.db
+Icon?
