--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "abcjs": "^6.2.3",
     "dotenv": "^17.2.2",
     "html-midi-player": "^1.6.0",
+    "lucide-react": "^0.562.0",
     "midi-parser-js": "^4.0.4",
     "node-fetch": "^3.3.2",
     "opensheetmusicdisplay": "^1.9.2",
