--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
   ],
   "rewrites": [
     {
+      "source": "/google-api/:match*",
+      "destination": "https://generativelanguage.googleapis.com/:match*"
+    },
+    {
       "source": "/test/:path*",
       "destination": "/test/:path*"
     },
@@ -25,7 +29,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob:; media-src 'self' data: blob:; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://paulrosen.github.io; worker-src 'self' blob:;"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob:; media-src 'self' data: blob:; connect-src 'self' https://*.supabase.co wss://*.supabase.co https://paulrosen.github.io https://generativelanguage.googleapis.com; worker-src 'self' blob:;"
         }
       ]
     }
