--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "vercel-build": "vite build"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.3",
     "@google/genai": "^1.20.0",
     "@music-i18n/musicxml-player": "github:infojunkie/musicxml-player",
     "@supabase/supabase-js": "^2.57.4",
     "abcjs": "^6.2.3",
+    "ai": "^6.0.11",
     "dotenv": "^17.2.2",
     "html-midi-player": "^1.6.0",
     "lucide-react": "^0.562.0",
