--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vercel-build": "vite build"
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^3.0.8",
     "@ai-sdk/google": "^3.0.3",
     "@google/genai": "^1.20.0",
     "@music-i18n/musicxml-player": "github:infojunkie/musicxml-player",
