--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@supabase/supabase-js": "^2.57.4",
     "abcjs": "^6.2.3",
     "ai": "^6.0.11",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
+    "framer-motion": "^12.24.7",
     "html-midi-player": "^1.6.0",
     "lucide-react": "^0.562.0",
     "midi-parser-js": "^4.0.4",
@@ -27,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-h5-audio-player": "^3.10.1",
     "react-router-dom": "^6.24.1",
+    "tailwind-merge": "^3.4.0",
     "tone": "^15.1.22",
     "vercel": "^48.10.11",
     "zod": "^4.1.8"
