--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-h5-audio-player": "^3.10.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.24.1",
+    "seedrandom": "^3.0.5",
     "tailwind-merge": "^3.4.0",
     "tone": "^15.1.22",
     "vercel": "^48.10.11",
